--- a/src/main/resources/templates/front-layout-inner-customar-page.html
+++ b/src/main/resources/templates/front-layout-inner-customar-page.html
@@ -9,14 +9,15 @@
         <meta name="keywords" content="">
         <meta name="author" content="Engr.Md Belayet Hossain Sumon">
 
-        <link rel="stylesheet" th:href="@{/bootstrap-5.2.3-dist/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.css}">
 
-        
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
         <!--  Font Awsome  -->
-   <link rel="stylesheet" href="webjars/font-awesome/6.5.1/css/all.min.css">
+        <link rel="stylesheet" href="/webjars/font-awesome/6.5.1/css/all.min.css">
 
-      <!--        Hover css-->
+        <!--        Hover css-->
         <link rel="stylesheet" th:href="@{/css/hover-min.css}">
         <!-- Custom css -->
         <link rel="stylesheet" th:href="@{/css/app.css}"/> 
