--- a/src/main/resources/static/css/admin-app.css
+++ b/src/main/resources/static/css/admin-app.css
@@ -1,7 +1,10 @@
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
-
+body{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
 
 #header {
     border-bottom: 1px solid #d8d8d8;
@@ -24,6 +27,8 @@
     background: #19222e;
     color: #fff;
     transition: all 0.3s;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 }
 
 .menu-item{
