--- a/src/main/resources/templates/admin-layout.html
+++ b/src/main/resources/templates/admin-layout.html
@@ -6,19 +6,13 @@
         <meta name="viewport"
               content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="/webjars/bootstrap/5.3.1/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="/webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.css">
         <link rel="stylesheet" href="/webjars/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-
-        <!--        <link rel="stylesheet" th:href="@{/bootstrap-5.2.3-dist/css/bootstrap.min.css}"/>-->
-           
-        <!-- Custom css -->
-        <link rel="stylesheet" th:href="@{/css/admin-app.css}"/> 
-
-        <!--        <link rel="stylesheet" href="/webjars/datatables/2.0.3/css/jquery.dataTables.min.css"/>-->
-        <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.jqueryui.min.css" >
+        <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.jqueryui.min.css" >       
         <!-- DataTables Buttons CSS -->
         <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.6/css/buttons.dataTables.min.css"/>
-        <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.bootstrap5.css"/>
-           <link rel="stylesheet" href="webjars/font-awesome/6.5.1/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.bootstrap5.css"/>        
+        <link rel="stylesheet" th:href="@{/css/admin-app.css}"/> 
         <title>Universes E-commerce</title>
     </head>
     <body>
@@ -57,63 +51,26 @@
             </div>
             <!-- /.content-wrapper -->
         </section>
-
-
-        <!--        <script th:src="@{/js/jquery-3.2.1.slim.min.js}"></script>-->
-
-
-        <!--                 Bootstrap -->
-
-
-
-        <!--        <script th:src="@{/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js}"></script>-->
-
         <script src="/webjars/jquery/3.7.0/jquery.min.js"></script>
         <script src="/webjars/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script>
         <script src="/webjars/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
         <!--        <script src="/webjars/datatables/2.0.3/js/jquery.dataTables.min.js"></script>-->
-
-        <script src="https://cdn.datatables.net/2.0.8/js/dataTables.min.js"></script>
-
-        <script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
+<!--        <script src="/webjars/momentjs/2.29.1/moment.min.js"></script>-->
+              <script src="https://cdn.datatables.net/2.0.8/js/dataTables.min.js"></script>
+<!--        <script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>-->
         <!-- JSZip for Excel export -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
         <!-- pdfmake for PDF export -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/pdfmake.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/vfs_fonts.js"></script>
         <!-- DataTables Buttons HTML5 export JS -->
-        <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
+<!--        <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>-->
         <!-- DataTables Buttons Print JS -->
-        <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
-
-        <!-- Form Validation -->
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
-        <!--        <script th:src="@{/webjars/tinymce/5.0.9/tinymce.min.js}" referrerpolicy="origin"></script>-->
-        <!--        All Custom Js-->
+        <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>      
         <script th:src="@{/js/admin-app.js}"></script>
         <script th:src="@{/js/admin_date.js}"></script>
 
-        <!--        <script>
-                    $(document).ready(function () {
-                        $('#example').DataTable();
-                    });
-                </script>-->
-        <script>
-            $(document).ready(function () {
-                $('#discountStartDate').datepicker({
-                    format: 'dd-mm-yyyy',
-                    autoclose: true
-                });
-            });
-            
-                $(document).ready(function () {
-                $('#discountEndDate').datepicker({
-                    format: 'dd-mm-yyyy',
-                    autoclose: true
-                });
-            });
-        </script>
-        <script>
+<!--        <script>
             $(document).ready(function () {
                 $('#example').DataTable({
                     dom: '<"d-flex justify-content-between"<"d-flex align-items-center"f><"button-group btn-group"B>>rtip',
@@ -147,6 +104,6 @@
                 });
 
             });
-        </script>
+        </script>-->
     </body>
 </html>
