--- a/src/main/resources/templates/admin-nav-top.html
+++ b/src/main/resources/templates/admin-nav-top.html
@@ -22,7 +22,7 @@
 
 
 <nav  id="header" class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+  <div class="container-fluid p-3">
     <a class="navbar-brand" href="#">Universes E-commerce</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -32,13 +32,13 @@
       <ul class="navbar-nav ms-auto">
           
           <li class="nav-item">
-                <a class="nav-link" th:href="@{/}">View Site</a>
+                <a class="nav-link" th:href="@{/}"> <i class="bi bi-globe2"></i> View Site</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Your Profile</a>
+                <a class="nav-link" href="#"> <i class="bi bi-person-circle"></i> Your Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/users/logout}">Log Out</a>
+                <a class="nav-link" th:href="@{/users/logout}">  <i class="bi bi-box-arrow-right text-danger"></i> Log Out</a>
             </li>
     
       </ul>
