--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div xmlns:th="http://www.thymeleaf.org" layout:decorate="error-layout">
+<div xmlns:th="http://www.thymeleaf.org" layout:decorate="front-layout-inner-page">
     <div layout:fragment = "main_content">
         <section style="padding: 40px 0px 100px 0px">
             <div class="container">
