--- a/src/main/resources/templates/front-header.html
+++ b/src/main/resources/templates/front-header.html
@@ -111,9 +111,15 @@
 
                     </div>
                     <div class="col text-center">
-
-                        <a class= "nav-link"
-                           th:href="@{/public/member-login}">Login</a>
+                        <div sec:authorize="!isAuthenticated()">
+                            <a class= "nav-link"
+                               th:href="@{/public/member-login}">Login</a>
+                        </div>
+                        
+                             <div sec:authorize="isAuthenticated()">
+                            <a class= "nav-link"
+                              th:href="@{/users/logout}" th:text="'Logout'"> </a>
+                        </div>
                     </div>
                     <div class="col text-center">
                         <a class= "nav-link"
