--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
                 <div class="col-sm-1"><h4> Product</h4></div>
                 <div class="col-sm-2">   <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="#" class="nav-link">Home</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Product List</li>
                         </ol>
                     </nav>
@@ -19,17 +19,20 @@ and open the template in the editor.
         </section>
         <hr/>
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-9">
 
                 <div class="card">
                     <div class="card-header">
                         <div class="row">  
-                            <div class="col-sm-5 font-weight-bold ">  <strong><i class="fas fa-list"></i> Product  List</strong> </div>
+                            <div class="col-sm-5 font-weight-bold "><strong> <i class="bi bi-list-task"></i> Product  List</strong> </div>
 
                             <div class="col-sm-7 text-end"> 
                                 <div class="btn-group ">
-                                    <a class="btn btn-success btn-sm float-right" th:href="@{/product/create}"> Add Product </a></div>
-                            </div></div>
+                                    <a class="btn btn-success btn-sm " th:href="@{/product/create}"> <i class="bi bi-plus-circle"></i> Add Product </a>
+                                    <a th:href="@{/admin/index}" type="button" class="btn  btn-danger btn-sm"> <i class="bi bi-x-circle"></i> Close</a></div>
+                            </div>
+
+                        </div>
                     </div>
                     <div class="card-body">
 
@@ -37,42 +40,32 @@ and open the template in the editor.
 
                             <div class="alert alert-success alert-dismissible fade show" role="alert">
                                 <span th:text="${message}" > </span>
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
+
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true"></span>
                                 </button>
                             </div>
                         </span>
+                        
+                        
                         <div class="card-body table-responsive">
                             <table id="example" class="table table-bordered table-hover table-striped">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">SKU</th>
-                                        <th scope="col">Name</th>
-                                        <th scope="col"> Slug </th>
-                                        <th scope="col"> Product Category </th>
-                                        <th scope="col"> Order no </th>
-                                        <th scope="col"> Image </th>
-                                        <th scope="col"> Price </th>
-                                        <th scope="col"> Status </th>
-                                        <th scope="col"> Created </th>
-                                        <th scope="col"> Updated </th>
+                                        <th>#</th>
+                                        <th>Image </th>
+
+                                        <th>Name</th>
+
+                                        <th>Price </th>
+                                        <th>Status </th>
+
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr th:each="productlists,status:${productlist}">
-
                                         <th th:text="${status.count}">1</th>
-                                        <td th:text="${productlists.sku}">Otto</td>
-
-                                        <td> <a th:href="@{/ourproduct/details/{id}(id=${productlists.id})}" th:text="${productlists.title}">    </a></td>
-
-                                        <td th:text="${productlists.slug}">Otto</td>
-
-                                        <td th:text="${productlists.productcategory.name}">Otto</td>
-
-                                        <td th:text="${productlists.orderno}">Otto</td>
-
                                         <td>
                                             <span th:if="${ not #strings.isEmpty(productlists.imageName)}" class="badge bg-green pull-right"> 
                                                 <img  class="img-responsive" th:src="@{/files/}+${productlists.imageName}" width="100px"  height="100px"/>
@@ -80,12 +73,14 @@ and open the template in the editor.
 
                                             <span th:if="${#strings.isEmpty(productlists.imageName)}" > Image Not Found </span>
                                         </td>
+                                        <td>
+                                            <a th:href="@{/product/details/{id}(id=${productlists.id})}" th:text="${productlists.title}">    </a>
+                                            <br>
+                                            <span th:text="${productlists.productcategory.name}">Otto</span>
+                                        </td>
                                         <td th:text="${productlists.price}">Otto</td>
                                         <td th:text="${productlists.status}">Otto</td>
-
-                                        <td th:text="${productlists.created}">Otto</td>
-
-                                        <td th:text="${productlists.modified}">@mdo</td>
+                                        <td><a  type="button" th:href="@{/product/details/{id}(id=${productlists.id})}">  <button class="btn btn-success btn-sm " > <i class="bi bi-eye-slash"></i> Details </button>  </a></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -98,5 +93,27 @@ and open the template in the editor.
 
 
             </div><!--  Main Content  end-->
+            <div class="col-sm-3">
+
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">  
+                            <div class="col-sm-5 font-weight-bold ">  <strong><i class="fas fa-list"></i> Filter</strong> </div>
+
+
+
+                        </div>
+                    </div>
+                    <div class="card-body">
+
+
+
+                    </div><!--  Card body end-->
+
+
+                </div><!--  Card  end-->
+
+
+            </div>
         </div>   <!--  Layout end-->      </div><!--  Main Content  end-->
 </div>
