--- a/src/main/resources/templates/product/productcategory/productcategory_details.html
+++ b/src/main/resources/templates/product/productcategory/productcategory_details.html
@@ -7,17 +7,27 @@ and open the template in the editor.
 <div xmlns:th="http://www.thymeleaf.org" layout:decorate="admin-layout">
     <div layout:fragment = "main_content">
 
-        <div> <h4> Product Category <small>Home>Product Category</small></h4>
+        <div> <h4> Product Category</h4> <small> Home>Product Category</small> 
         </div>
         <hr/>
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
-                    <div class="card-header">
-                        <div class="row"> <div class="col-sm-5 font-weight-bold text-danger"><i class="fas fa-list"></i> Product Category Details</div>
-                            <div class="col-sm-7 "> <a class="btn btn-danger btn-sm float-right" th:href="@{/productcategory/index}">Close</a></div>
-                        </div>
-                    </div>
+                    <div class="card-header ">
+                        <div class="row"> 
+                            <div class="col-sm-5 font-weight-bold ">
+                                <i class="bi bi-list-task"></i>
+                                Product Category Details
+                            </div>
+                            <div class="col-sm-7 text-end ">
+                                <div class="btn-group ">
+                                    <a  class="btn btn-success btn-sm " th:href="@{/productcategory/edit/{id}(id=${productcategory_details.id})}"> <i class="bi bi-pencil"></i> Edit</a>
+                                    <a  class="btn btn-warning btn-sm " th:href="@{/productcategory/delete/{id}(id=${productcategory_details.id})}"> <i class="bi bi-trash3"></i> Delete </a>
+                                    <a class="btn btn-danger btn-sm " th:href="@{/productcategory/index}"><i class="bi bi-x-circle"></i> Close</a>
+                                </div>
+                            </div>
+                        </div>  </div>
+
                     <div class="card-body">
 
                         <table class="table table-bordered">
@@ -35,6 +45,48 @@ and open the template in the editor.
 
                             </tr>
 
+                            <tr>
+                                <td> Parent Category</td>
+                                <td>: </td>
+                                <td th:text="${productcategory_details.slug}">Otto</td>
+
+                            </tr>
+                            <tr>
+                                <td> Order Position No:</td>
+                                <td>: </td>
+                                <td th:text="${productcategory_details.orderno}">Otto</td>
+
+                            </tr>
+
+                            <tr>
+                                <td> Discount By Category:</td>
+                                <td>: </td>
+                                <td th:text="${productcategory_details.discount}">Otto</td>
+
+                            </tr>
+
+                            <tr>
+                                <td> Discount Start Date:</td>
+                                <td>: </td>
+                                <td th:text="${productcategory_details.discountStartDate}">Otto</td>
+
+                            </tr>
+
+                            <tr>
+                                <td> Discount End Date:</td>
+                                <td>: </td>
+                                <td th:text="${productcategory_details.discountEndDate}">Otto</td>
+
+                            </tr>
+
+                            <tr>
+                                <td> Description:</td>
+                                <td>: </td>
+                                <td th:text="${productcategory_details.description}">Otto</td>
+                            </tr>
+
+
+
                             <tr> <td> Image</td>
                                 <td> :</td>
                                 <td> 
@@ -45,16 +97,16 @@ and open the template in the editor.
                                     <span th:if="${#strings.isEmpty(productcategory_details.imageName)}" > Image Not Found </span></td>
                             </tr>
 
-                            <tr> <td> Description</td>
+                            <tr> <td> Status</td>
                                 <td> :</td>
-                                <td th:text="${productcategory_details.description}"> </td>
+                                <td th:text="${productcategory_details.status}"> </td>
 
                             </tr>
+
 
                             <tr> <td> Created</td>
                                 <td> :</td>
                                 <td>  <span th:text="${productcategory_details.created}"> </span> </td>
-
                             </tr>
 
                             <tr> <td> Created By</td>
@@ -71,20 +123,9 @@ and open the template in the editor.
                                 <td> :</td>
                                 <td> <span th:text="${productcategory_details.modifiedBy}"> </span></td>
                             </tr>
-
-                            <tr> 
-                                <td> <a th:href="@{/productcategory/edit/{id}(id=${productcategory_details.id})}"> Edit  </a></td>
-
-                                <td> </td>
-
-                                <td><a th:href="@{/productcategory/delete/{id}(id=${productcategory_details.id})}"> Delete </a></td>
-                            </tr>
                         </table>
 
-                    </div><!--  Card body end-->
-
-                    <div class="card-footer">
-                    </div> <!--  Card footer end-->
+                    </div> 
                 </div><!--  Card  end-->
 
 
